# user-management

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  settings.py
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 20f4d15cdcef_new_migration.py  29fc85bf4805_new_migration.py  4eb38e279a4a_init_migration.py  82f070f25df5_added_password_field_to_user_model.py  dc1db397f47f_initial_migrate.py
src/: config.py  database.py  main.py
src/auth/: redis.py  router.py  schemas.py  service.py  utils.py
src/aws/: router.py  utils.py
src/db/: database.py
src/log/: logging_config.py  logging_config.yaml
src/rabbitmq/: producer.py
src/repositories/: user_repository.py
src/user/: dependencies.py  models.py  router.py  schemas.py  service.py
test/: test_app.py
