[tool.poetry]
name = "user-management"
version = "0.1.0"
description = "none"
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
fastapi = "^0.104.1"

[tool.poetry.dev-dependencies]
black = "^21.10b1"
isort = "^5.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
